# VoiceTranscoder

./: .editorconfig  API.cpp  API.h  AnyPointer.cpp  AnyPointer.h  BinaryPattern.h  Buffer.h  CMakeLists.txt  CRC32.cpp  CRC32.h  Compile.sh  CompileICC.sh  DProtoAPI.cpp  DProtoAPI.h  DllAPI.cpp  Engine.h  EngineFuncs.cpp  EngineUTIL.cpp  Hook.h  HookList.cpp  Hook_Begin.cpp  Hook_Begin.h  Library.h  Logger.cpp  Logger.h  Logging.cpp  Main.cpp  Main.h  MetaAPI.cpp  MetaUTIL.cpp  MetaUtil.h  MultiThread.h  NetMsgBuf.h  Patch.h  Publish.bat  README.md  SKP_Silk_FLP_Win32_mt.lib  SteamID.h  ThreadMode.cpp  ThreadMode.h  (+25 more)
Hashers/: CRC32.h
MultiThreading/: Mutex.h  Signal.cpp  Signal.h  Thread.cpp  Thread.h
Utility/: AnyPointer.h  BinaryPattern.cpp  BinaryPattern.h  Buffer.h  EngineUTIL.cpp  EngineUTIL.h  FunctionHook.h  FunctionHook_Beginning.cpp  FunctionHook_Beginning.h  JmpOpcode.cpp  MemoryUnlocker.cpp  MemoryUnlocker.h  MetaUTIL.cpp  MetaUTIL.h  Module.cpp  Module.h  Section.h  SteamID.cpp  SteamID.h  Time.cpp  UtilFunctions.cpp  UtilTypes.h
VoiceCodecManager/: SKP_Silk_FLP_Win32_mt.lib  VoiceCodecManager.vcxproj  VoiceEncoder_Silk.cpp  VoiceEncoder_Silk.h  build.h  compile.sh  dllapi.cpp  iframeencoder.h  interface.cpp  interface.h  ivoicecodec.h  libspeex.lib  sdk_util.cpp  util.h  utlmemory.h  voice_codec_frame.cpp  voicecodecmanager.cpp  voicecodecmanager.h
VoiceCodecManager/hacker/: dynamiclibrary.h
VoiceCodecs/Opus/: CMakeLists.txt  config.h
VoiceCodecs/SILK/: CMakeLists.txt  SKP_Silk_main_FLP.h
VoiceCodecs/Speex/: CMakeLists.txt
hlsdk/common/: cvardef.h
hlsdk/engine/: common_rehlds.h  eiface.h  progdefs.h  rehlds_api.h  spritegn.h  sys_shared.h
metamod/: osdep.h  plinfo.h
trunk/: API.cpp  API.h  BinaryPattern.cpp  Buffer.cpp  Buffer.h  CRC32.cpp  CRC32.h  Compile.sh  CompileICC.sh  DProtoAPI.cpp  Engine.h  EngineFuncs.h  EngineUTIL.cpp  EngineUTIL.h  ErrorCode.h  Hook.h  HookList.h  Hook_Begin.cpp  Hook_Begin.h  Hook_Call.cpp  Hook_Call.h  Library.cpp  Library.h  List.h  Logger.cpp  Logging.cpp  Logging.h  Main - копия (2).cpp  Main - копия.cpp  Main.cpp  Main.h  Makefile  MetaAPI.cpp  MetaUTIL.h  MetaUtil.cpp  MetaUtil.h  MultiThread.cpp  MultiThread.h  NetMsgBuf.h  Patch.h  (+43 more)
trunk/Hashers/: CRC32.cpp
trunk/MultiThreading/: Mutex.cpp
trunk/Utility/: BinaryPattern.cpp  BinaryPattern.h  Buffer.cpp  EngineUTIL.cpp  GoldSrcEngineStructs.h  JmpOpcode.h  MemoryUnlocker.cpp  MetaUTIL.cpp  Module.cpp  Optional.h  Section.cpp  SteamID.cpp  Time.cpp  Time.h  UtilFunctions.h
trunk/VoiceCodecManager/: SKP_Silk_FLP_Win32_mt.lib  VoiceCodecManager.vcxproj  VoiceCodecManager.vcxproj.filters  VoiceEncoder_Silk.cpp  VoiceEncoder_Silk.h  VoiceEncoder_Speex.cpp  VoiceEncoder_Speex.h  build.cpp  compile.sh  h_export.cpp  util.h  voicecodecmanager.cpp  voicecodecmanager.h
trunk/VoiceCodecManager/hacker/: hooker.h  platform.h
trunk/VoiceCodecs/Opus/: config.h
trunk/VoiceCodecs/Opus/silk/x86/: NSQ_del_dec_sse.c  NSQ_sse.c  VQ_WMat_EC_sse.c
trunk/VoiceCodecs/Speex/: filters.c  filters.h  nb_celp.c
trunk/hacker/: memory.h  virtfuncs.h
trunk/hlsdk/common/: cvardef.h
trunk/hlsdk/engine/: archtypes.h  eiface.h  model.h  rehlds_api.h
trunk/metamod/: osdep.h
